# Synchronizer

./: CMakeLists.txt  README.md
src/: containerStruct.hpp  main.cpp  printContainer.cpp  printContainer.hpp  randomDeleter.cpp  randomDeleter.hpp  synchronizator.cpp  synchronizator.hpp
